objects/CMPL123__X123_Report_Template__c.object
<CustomObject>
    <description>Report Templates</description>
    <fields>
        <fullName>CMPL123__Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Footer__c</fullName>
        <description>Footer</description>
        <inlineHelpText>Footer</inlineHelpText>
        <label>Footer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Include_E_Signature_History__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This controls whether or not the E-Signature History is displayed in the Report.</description>
        <label>Include E-Signature History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Active</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Logo_Details__c</fullName>
        <description>Logo Details</description>
        <label>Logo Details</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Object_Name__c</fullName>
        <description>Object Name</description>
        <inlineHelpText>Object Name</inlineHelpText>
        <label>Object Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Report_Template_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Report Template External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Title__c</fullName>
        <description>Title</description>
        <inlineHelpText>Title</inlineHelpText>
        <label>Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Use_Report_Template_Field_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Report Template Field Label</label>
        <type>Checkbox</type>
    </fields>
    <label>Report Template</label>
    <listViews>
        <fullName>CMPL123__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>